force-app/main/default/objects/Customer_Order__c/fields/Delivery_Adress__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Adress__c</fullName>
    <label>Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>