force-app/main/default/objects/Customer_Order__c/fields/Total_Bill__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill__c</fullName>
    <label>Total Bill</label>
    <summarizedField>Order_Item__c.Total_Item_Cost__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Customer_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>