force-app/main/default/objects/Customer_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Delivery_Adress__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Total_Bill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>